fix ruff format

--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -1059,7 +1059,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm = TokenProposal(guide=lm, llm=MockLLM(V={x for _, x in H.pairs}, eos=H.tokenizer.eos_token))"
+    "bpe_lm = TokenProposal(\n",
+    "    guide=lm, llm=MockLLM(V={x for _, x in H.pairs}, eos=H.tokenizer.eos_token)\n",
+    ")"
    ]
   },
   {
