--- a/notes/Token-Alignment.ipynb
+++ b/notes/Token-Alignment.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "p = CFGLM.from_string(\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "\n",
     "1: S -> a\n",
     "1: S -> a a\n",
@@ -1621,7 +1621,14 @@
    ],
    "source": [
     "display_table(\n",
-    "    [[p.cfg.language(100).project(ϕ).sort(), L_PB.sort(), generation_tree(graft).D.sort(), PL.sort()]],\n",
+    "    [\n",
+    "        [\n",
+    "            p.cfg.language(100).project(ϕ).sort(),\n",
+    "            L_PB.sort(),\n",
+    "            generation_tree(graft).D.sort(),\n",
+    "            PL.sort(),\n",
+    "        ]\n",
+    "    ],\n",
     "    headings=['target', 'pfst', 'grafting-heuristic', 'wfst'],\n",
     ")"
    ]
@@ -1673,7 +1680,7 @@
     "        out = trace({'a': 0.5, 'b': 0.5})\n",
     "        if out == 'a':\n",
     "            out = trace({'a': 0.9, 'b': 0.1})\n",
-    "        else:        \n",
+    "        else:\n",
     "            out = trace({'a': 0.01, 'b': 0.99})\n",
     "    print(out, trace.root.mass)"
    ]
