update earley with rescaling; added tests

--- a/benchmark/Spider.ipynb
+++ b/benchmark/Spider.ipynb
@@ -24,6 +24,7 @@
     "from genparse import EOS\n",
     "\n",
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -44,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for x in spider.dev_data[:2]:\n",
+    "# for x in spider.dev_data[:2]:\n",
     "#    print()\n",
     "#    print(x.text)\n",
     "#    print(x.gold_sql)\n",
@@ -169,12 +170,13 @@
     "\n",
     "import bench.spider.evaluation as E\n",
     "from bench.spider.evaluation import (\n",
-    "    #build_foreign_key_map_from_json,\n",
+    "    # build_foreign_key_map_from_json,\n",
     "    build_valid_col_units,\n",
     "    rebuild_sql_val,\n",
     "    rebuild_sql_col,\n",
     "    eval_exec_match,\n",
     ")\n",
+    "\n",
     "\n",
     "def evaluate(self, gold: str, pred: str, db_name: str):\n",
     "    \"\"\"Returns: bool, Optional[str]\n",
@@ -192,11 +194,15 @@
     "        p_sql = E.get_sql(schema, pred)\n",
     "    except Exception as e:\n",
     "        # sql is ill-formed (can't be parsed by sqlite engine)\n",
-    "        print(colors.red % e.__class__.__name__, e, )\n",
+    "        print(\n",
+    "            colors.red % e.__class__.__name__,\n",
+    "            e,\n",
+    "        )\n",
     "\n",
     "        import traceback\n",
+    "\n",
     "        traceback.print_exc()\n",
-    "        \n",
+    "\n",
     "        return False, 'invalid'\n",
     "\n",
     "    kmap = self.kmaps[db_name]\n",
@@ -212,7 +218,8 @@
     "\n",
     "    return exec_match, reason\n",
     "\n",
-    "#spider.evaluator = evaluate"
+    "\n",
+    "# spider.evaluator = evaluate"
    ]
   },
   {
@@ -222,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x.interface.evaluator = evaluate"
+    "# x.interface.evaluator = evaluate"
    ]
   },
   {
@@ -288,7 +295,9 @@
     }
    ],
    "source": [
-    "x.interface.evaluator.evaluate(x.interface.evaluator, gold = x.gold_sql, pred = junk_sql, db_name = x.db_name)"
+    "x.interface.evaluator.evaluate(\n",
+    "    x.interface.evaluator, gold=x.gold_sql, pred=junk_sql, db_name=x.db_name\n",
+    ")"
    ]
   },
   {
@@ -298,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x.db_schema.columns"
+    "# x.db_schema.columns"
    ]
   },
   {
@@ -308,7 +317,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grammar_text = open('/home/timv/projects/genparse/benchmark/grammars/sql_case_insensitive.lark').read()"
+    "grammar_text = open(\n",
+    "    '/home/timv/projects/genparse/benchmark/grammars/sql_case_insensitive.lark'\n",
+    ").read()"
    ]
   },
   {
@@ -347,8 +358,14 @@
     }
    ],
    "source": [
-    "#infer = InferenceSetup('codellama', grammar_text, proposal_name='character', guide_opts={'ignore': '\\s*'})\n",
-    "infer = InferenceSetupVLLM('codellama', grammar_text, proposal_name='character', guide_opts={'ignore': r'\\s*'}, batch_size=50)"
+    "# infer = InferenceSetup('codellama', grammar_text, proposal_name='character', guide_opts={'ignore': '\\s*'})\n",
+    "infer = InferenceSetupVLLM(\n",
+    "    'codellama',\n",
+    "    grammar_text,\n",
+    "    proposal_name='character',\n",
+    "    guide_opts={'ignore': r'\\s*'},\n",
+    "    batch_size=50,\n",
+    ")"
    ]
   },
   {
@@ -390,8 +407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#infer.proposal.timer.compare()\n",
-    "#infer.proposal.timer.plot_feature('t')"
+    "# infer.proposal.timer.compare()\n",
+    "# infer.proposal.timer.plot_feature('t')"
    ]
   },
   {
@@ -402,7 +419,7 @@
    "outputs": [],
    "source": [
     "def show_posterior_tables(x, p):\n",
-    "    display(HTML(f'<h3>{x.text}</h3>')) \n",
+    "    display(HTML(f'<h3>{x.text}</h3>'))\n",
     "    for y, py in sorted(p.posterior.items(), key=lambda ab: -ab[1]):\n",
     "        y = y[:-1]  # remove EOS\n",
     "        print(f'{colors.mark(x.evaluate(y))} {py:-.6f} {y}')\n",
@@ -899,12 +916,14 @@
    "outputs": [],
    "source": [
     "def EVAL(x, y1, y2):\n",
-    "    if y1.endswith(EOS): y1 = y1[:-1]  \n",
-    "    if y2.endswith(EOS): y2 = y2[:-1]\n",
+    "    if y1.endswith(EOS):\n",
+    "        y1 = y1[:-1]\n",
+    "    if y2.endswith(EOS):\n",
+    "        y2 = y2[:-1]\n",
     "    try:\n",
     "        return x.interface.evaluate(y1, y2, x.db_name)[0]\n",
     "    except Exception:\n",
-    "#        print(e)\n",
+    "        #        print(e)\n",
     "        return False"
    ]
   },
@@ -916,8 +935,7 @@
    "outputs": [],
    "source": [
     "def risk(x, candidate, particles):\n",
-    "    return sum(p * EVAL(x, candidate, y)        \n",
-    "               for y, p in particles.posterior.items())"
+    "    return sum(p * EVAL(x, candidate, y) for y, p in particles.posterior.items())"
    ]
   },
   {
@@ -928,17 +946,25 @@
    "outputs": [],
    "source": [
     "def show_mbr_tables(x, particles):\n",
-    "    display(HTML(f'<h3>{x.text}</h3>')) \n",
-    "    risks = {candidate: risk(x, candidate, particles) for candidate in particles.posterior}\n",
+    "    display(HTML(f'<h3>{x.text}</h3>'))\n",
+    "    risks = {\n",
+    "        candidate: risk(x, candidate, particles) for candidate in particles.posterior\n",
+    "    }\n",
     "    for candidate in sorted(risks, key=risks.__getitem__, reverse=True):\n",
-    "        print(colors.mark(x.evaluate(candidate[:-1] if candidate.endswith(EOS) else candidate)), \n",
-    "              f'{risks[candidate]:f}', (colors.dark.magenta if risks[candidate] == 0 else colors.light.magenta) % candidate)\n",
+    "        print(\n",
+    "            colors.mark(\n",
+    "                x.evaluate(candidate[:-1] if candidate.endswith(EOS) else candidate)\n",
+    "            ),\n",
+    "            f'{risks[candidate]:f}',\n",
+    "            (colors.dark.magenta if risks[candidate] == 0 else colors.light.magenta)\n",
+    "            % candidate,\n",
+    "        )\n",
     "        try:\n",
     "            display(x.run_query(candidate[:-1] if candidate.endswith(EOS) else candidate))\n",
     "        except Exception as e:\n",
     "            print()\n",
     "            print(colors.dark.red % '💀 ERROR', e)\n",
-    "            print()\n"
+    "            print()"
    ]
   },
   {
@@ -1342,9 +1368,7 @@
    "id": "4cbb631a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
