--- a/notes/Crunching.ipynb
+++ b/notes/Crunching.ipynb
@@ -13,10 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "55df53aa-50e2-4e6d-9f93-c3802006507e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING 06-30 00:02:45 _custom_ops.py:14] Failed to import from vllm._C with ImportError('libcuda.so.1: cannot open shared object file: No such file or directory')\n"
+     ]
+    }
+   ],
    "source": [
     "from arsenal import colors\n",
     "from arsenal.iterextras import take\n",
@@ -91,7 +99,7 @@
       "1.6390993557883634e-24 Se\u001b[0;31m·\u001b[0mq\u001b[0;31m·\u001b[0mu\u001b[0;31m·\u001b[0mential\u001b[0;31m·\u001b[0m Monte\u001b[0;31m·\u001b[0m Carlo\u001b[0;31m·\u001b[0m is\u001b[0;31m·\u001b[0m good\u001b[0;31m·\u001b[0m▪\n",
       "..\n",
       "1.5369876767814937e-24 S\u001b[0;31m·\u001b[0me\u001b[0;31m·\u001b[0mqu\u001b[0;31m·\u001b[0mential\u001b[0;31m·\u001b[0m Monte\u001b[0;31m·\u001b[0m Carlo\u001b[0;31m·\u001b[0m is\u001b[0;31m·\u001b[0m good\u001b[0;31m·\u001b[0m▪\n",
-      "took 16.690921783447266 sec\n"
+      "took 17.918262720108032 sec\n"
      ]
     }
    ],
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2927cf2e-497e-4496-96e3-8aa4e1c7e8e6",
    "metadata": {},
    "outputs": [],
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "b679575f-f0f3-4857-b52b-df977e13cd1b",
    "metadata": {},
    "outputs": [
