--- a/notes/Inference-Playground.ipynb
+++ b/notes/Inference-Playground.ipynb
@@ -52,7 +52,15 @@
    "execution_count": 2,
    "id": "aa48d89c-f727-42c9-b50a-a7b31ac2dbec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING 06-30 00:06:53 _custom_ops.py:14] Failed to import from vllm._C with ImportError('libcuda.so.1: cannot open shared object file: No such file or directory')\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import nest_asyncio\n",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7fa18cb0-4ac4-42c3-b939-86c92985b9d8",
    "metadata": {},
    "outputs": [],
@@ -121,20 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "613366c8-31a8-481f-a281-b0b369d226d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"font-family: Monospace;\"><table><tr style=\"font-weight: bold;\"><td>key</td><td>value</td></tr><tr><td><pre>aaaaaa▪</pre></td><td><pre>0.5569136745607334</pre></td> </tr><tr><td><pre>aa▪</pre></td><td><pre>0.13750954927425513</pre></td> </tr><tr><td><pre>▪</pre></td><td><pre>0.30557677616501144</pre></td> </tr></table></div>"
+       "<div style=\"font-family: Monospace;\"><table><tr style=\"font-weight: bold;\"><td>key</td><td>value</td></tr><tr><td><pre>▪</pre></td><td><pre>0.30557677616501144</pre></td> </tr><tr><td><pre>aa▪</pre></td><td><pre>0.13750954927425516</pre></td> </tr><tr><td><pre>aaaaaa▪</pre></td><td><pre>0.5569136745607334</pre></td> </tr></table></div>"
       ],
       "text/plain": [
-       "{'aaaaaa▪': 0.5569136745607334, 'aa▪': 0.13750954927425513, '▪': 0.30557677616501144}"
+       "{'▪': 0.30557677616501144, 'aa▪': 0.13750954927425516, 'aaaaaa▪': 0.5569136745607334}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3bf41f73-26fd-44a5-bfaf-39431860f1cf",
    "metadata": {},
    "outputs": [],
@@ -171,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f58e0432-a269-4dda-8012-10e74fa1d91b",
    "metadata": {},
    "outputs": [],
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "606f4ac3-75fc-4d4b-8a3a-9000d257ddb4",
    "metadata": {},
    "outputs": [
@@ -220,25 +228,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>▪</td>\n",
-       "      <td>0.346470</td>\n",
+       "      <td>0.313429</td>\n",
        "      <td>0.305577</td>\n",
-       "      <td>0.040893</td>\n",
+       "      <td>0.007852</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>aa▪</td>\n",
-       "      <td>0.110635</td>\n",
+       "      <td>0.143892</td>\n",
        "      <td>0.137510</td>\n",
-       "      <td>0.026874</td>\n",
+       "      <td>0.006383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>aaaaaa▪</td>\n",
-       "      <td>0.542895</td>\n",
+       "      <td>0.542679</td>\n",
        "      <td>0.556914</td>\n",
-       "      <td>0.014019</td>\n",
+       "      <td>0.014234</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -246,12 +254,12 @@
       ],
       "text/plain": [
        "       key      self     other    metric\n",
-       "1        ▪  0.346470  0.305577  0.040893\n",
-       "0      aa▪  0.110635  0.137510  0.026874\n",
-       "2  aaaaaa▪  0.542895  0.556914  0.014019"
+       "2        ▪  0.313429  0.305577  0.007852\n",
+       "0      aa▪  0.143892  0.137510  0.006383\n",
+       "1  aaaaaa▪  0.542679  0.556914  0.014234"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,21 +296,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ecfb2d06-6f3b-43c4-9bf9-a6237c223191",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.inference import TraceSWOR\n",
+    "from genparse.trace import TraceSWOR\n",
     "from arsenal import iterview"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "681fc37f-9438-43a8-baa8-9379fd2364e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc32747c6b4a4f26b75250fe59853212",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">()\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "()\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">('a', 'a', 'a', 'a', 'a', 'a')\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "('a', 'a', 'a', 'a', 'a', 'a')\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">('a', 'a')\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "('a', 'a')\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"font-family: Monospace;\"><table><tr style=\"font-weight: bold;\"><td>key</td><td>value</td></tr><tr><td><pre>()</pre></td><td><pre>0.3055767762311148</pre></td> </tr><tr><td><pre>(&#x27;a&#x27;, &#x27;a&#x27;)</pre></td><td><pre>0.13750954928291817</pre></td> </tr><tr><td><pre>(&#x27;a&#x27;, &#x27;a&#x27;, &#x27;a&#x27;, &#x27;a&#x27;, &#x27;a&#x27;, &#x27;a&#x27;)</pre></td><td><pre>0.5569136744859671</pre></td> </tr></table></div>"
+      ],
+      "text/plain": [
+       "{(): 0.3055767762311148, ('a', 'a'): 0.13750954928291817, ('a', 'a', 'a', 'a', 'a', 'a'): 0.5569136744859671}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tracer = TraceSWOR()\n",
     "R = Float.chart()\n",
@@ -319,10 +417,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d6163d8b-e8f8-4ea0-8591-c2d80bedbd27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>self</th>\n",
+       "      <th>other</th>\n",
+       "      <th>metric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>()</td>\n",
+       "      <td>0.305577</td>\n",
+       "      <td>0.305577</td>\n",
+       "      <td>6.610335e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(a, a)</td>\n",
+       "      <td>0.137510</td>\n",
+       "      <td>0.137510</td>\n",
+       "      <td>8.663015e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(a, a, a, a, a, a)</td>\n",
+       "      <td>0.556914</td>\n",
+       "      <td>0.556914</td>\n",
+       "      <td>7.476630e-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  key      self     other        metric\n",
+       "1                  ()  0.305577  0.305577  6.610335e-11\n",
+       "2              (a, a)  0.137510  0.137510  8.663015e-12\n",
+       "0  (a, a, a, a, a, a)  0.556914  0.556914  7.476630e-11"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# truncate the reference distribution to the support set of the sample;\n",
     "# renamed the keys to handle the minor discrepancy in the EOS symbol\n",
