same as previous; but extended to notebooks

--- a/notes/Inference-Playground.ipynb
+++ b/notes/Inference-Playground.ipynb
@@ -52,21 +52,13 @@
    "execution_count": 2,
    "id": "aa48d89c-f727-42c9-b50a-a7b31ac2dbec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING 06-30 00:06:53 _custom_ops.py:14] Failed to import from vllm._C with ImportError('libcuda.so.1: cannot open shared object file: No such file or directory')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()\n",
-    "from genparse import CFGLM, Float\n",
+    "from genparse import EarleyLM as CFGLM, Float\n",
     "from genparse.steer import run, BruteForceGlobalProductOfExperts"
    ]
   },
@@ -230,23 +222,23 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>▪</td>\n",
-       "      <td>0.313429</td>\n",
+       "      <td>0.271899</td>\n",
        "      <td>0.305577</td>\n",
-       "      <td>0.007852</td>\n",
+       "      <td>0.033677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>aa▪</td>\n",
-       "      <td>0.143892</td>\n",
+       "      <td>0.136715</td>\n",
        "      <td>0.137510</td>\n",
-       "      <td>0.006383</td>\n",
+       "      <td>0.000795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>aaaaaa▪</td>\n",
-       "      <td>0.542679</td>\n",
+       "      <td>0.591386</td>\n",
        "      <td>0.556914</td>\n",
-       "      <td>0.014234</td>\n",
+       "      <td>0.034472</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -254,9 +246,9 @@
       ],
       "text/plain": [
        "       key      self     other    metric\n",
-       "2        ▪  0.313429  0.305577  0.007852\n",
-       "0      aa▪  0.143892  0.137510  0.006383\n",
-       "1  aaaaaa▪  0.542679  0.556914  0.014234"
+       "2        ▪  0.271899  0.305577  0.033677\n",
+       "0      aa▪  0.136715  0.137510  0.000795\n",
+       "1  aaaaaa▪  0.591386  0.556914  0.034472"
       ]
      },
      "execution_count": 8,
@@ -314,25 +306,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc32747c6b4a4f26b75250fe59853212",
+       "model_id": "a5285ef18c194e169b3ca7bc596d5f17",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">()\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "()\n"
       ]
      },
      "metadata": {},
@@ -359,6 +338,19 @@
       ],
       "text/plain": [
        "('a', 'a')\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">()\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "()\n"
       ]
      },
      "metadata": {},
@@ -457,14 +449,14 @@
        "      <td>6.610335e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>(a, a)</td>\n",
        "      <td>0.137510</td>\n",
        "      <td>0.137510</td>\n",
        "      <td>8.663015e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>(a, a, a, a, a, a)</td>\n",
        "      <td>0.556914</td>\n",
        "      <td>0.556914</td>\n",
@@ -477,8 +469,8 @@
       "text/plain": [
        "                  key      self     other        metric\n",
        "1                  ()  0.305577  0.305577  6.610335e-11\n",
-       "2              (a, a)  0.137510  0.137510  8.663015e-12\n",
-       "0  (a, a, a, a, a, a)  0.556914  0.556914  7.476630e-11"
+       "0              (a, a)  0.137510  0.137510  8.663015e-12\n",
+       "2  (a, a, a, a, a, a)  0.556914  0.556914  7.476630e-11"
       ]
      },
      "execution_count": 11,
@@ -497,14 +489,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d19c2cfd-f92e-4417-a09e-6bad3adfe0db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac850b07-5999-4e26-8e5e-fd6b0f84e918",
    "metadata": {},
    "outputs": [],
    "source": []
