some bugfixes 😬 - WFSA → CFG conversion handled ε-arcs incorrectly! the `__call__` method on `Earley` and `CKYLM` were wrong!

--- a/benchmark/Spider.ipynb
+++ b/benchmark/Spider.ipynb
@@ -1656,7 +1656,8 @@
     "def show_mbr_tables(x, particles):\n",
     "    display(HTML(f'<h3>{x.text}</h3>'))\n",
     "    risks = {\n",
-    "        candidate: particles.risk(lambda y1,y2: EVAL(x, y1, y2), candidate) for candidate in particles.posterior\n",
+    "        candidate: particles.risk(lambda y1, y2: EVAL(x, y1, y2), candidate)\n",
+    "        for candidate in particles.posterior\n",
     "    }\n",
     "    for candidate in sorted(risks, key=risks.__getitem__, reverse=True):\n",
     "        print(\n",
