simple SMC visualization in d3

--- a/notes/smc_visualization.ipynb
+++ b/notes/smc_visualization.ipynb
@@ -7008,11 +7008,11 @@
     "        return super(NumpyEncoder, self).default(obj)\n",
     "\n",
     "if WRITE_EXAMPLE:\n",
-    "    with open('test/TEMPr.json', 'w') as f:\n",
+    "    with open('smc_viz/MyExample.json', 'w') as f:\n",
     "        json.dump(particle_approx.record,f,cls=NumpyEncoder)\n",
     "if READ_EXAMPLE:\n",
     "    from genparse.record import SMCRecord\n",
-    "    with open('test/TEMPr.json', 'r') as f:\n",
+    "    with open('smc_viz/MyExample.json', 'r') as f:\n",
     "        record = SMCRecord(**json.load(f))"
    ]
   },
