checking in my version of grammar-aligned decoding (issue #7), which was based on @ClementeP's version.

--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -64,7 +64,7 @@
     "        tmp = tmp * FST.from_pairs([pair], Float)\n",
     "    return tmp\n",
     "    # TODO: approximate this transducer by a canonical path\n",
-    "    # return c2t(c, None).trim.epsremove.trim\n"
+    "    # return c2t(c, None).trim.epsremove.trim"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "                        (token_id, next_state),\n",
     "                        decay,\n",
     "                    )\n",
-    "    return m\n"
+    "    return m"
    ]
   },
   {
