tighten up 's wildcard logic (don't compute it if you don't need to); remove instances of the deprecated  option for

--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -1058,7 +1058,7 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "foo = lark_stuff.char_cfg(0.7)\n",
+    "foo = lark_stuff.char_cfg()\n",
     "foo = locally_normalize(foo, tol=1e-100).trim()\n",
     "assert len(foo) > 0\n",
     "lm = CFGLM(foo)"
