Add sample constrained output

--- a/notes/sentence_to_sql/demo.ipynb
+++ b/notes/sentence_to_sql/demo.ipynb
@@ -768,15 +768,15 @@
     "\n",
     "\n",
     "# ignored top_p=0.95\n",
-    "# server_inference_params = {'model_name': 'codellama', 'max_tokens': 256, 'n_particles': 15, 'temperature': .8, 'grammar': smallgrammar}\n",
-    "# response = run_inference_server(prompt, **server_inference_params)\n",
-    "# try:\n",
-    "#     data = response.json()\n",
-    "#     for i, (query, likelihood) in enumerate(data['posterior'].items(), start=1):\n",
-    "#         print(f'Generated Query {i} (likelihood {100 * likelihood:.2f}%): ```{query}```')\n",
-    "# except json.JSONDecodeError:\n",
-    "#     print(response.status_code)\n",
-    "#     print(response.text)"
+    "server_inference_params = {'model_name': 'codellama', 'max_tokens': 256, 'n_particles': 15, 'temperature': .8, 'grammar': smallgrammar}\n",
+    "response = run_inference_server(prompt, **server_inference_params)\n",
+    "try:\n",
+    "    data = response.json()\n",
+    "    for i, (query, likelihood) in enumerate(data['posterior'].items(), start=1):\n",
+    "        print(f'Generated Query {i} (likelihood {100 * likelihood:.2f}%): ```{query}```')\n",
+    "except json.JSONDecodeError:\n",
+    "    print(response.status_code)\n",
+    "    print(response.text)"
    ]
   },
   {
