Add outputs for real this time

--- a/notes/sentence_to_sql/demo.ipynb
+++ b/notes/sentence_to_sql/demo.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 162,
    "id": "3cc5b7ed-8177-4f27-b858-83ace66eb15a",
    "metadata": {
     "scrolled": true
@@ -720,7 +720,45 @@
       "\n",
       "- Sun Yat-sen\n",
       "\n",
-      "Make your query as inclusive (permissive) as possible based on the names. Write a query that allows either a matching given name OR a matching family name. Where the full name is not given, use OR conditions, and consider that a name may be either a given or a family name. Write your query alone without additional commentary. [/INST]```\n"
+      "Make your query as inclusive (permissive) as possible based on the names. Write a query that allows either a matching given name OR a matching family name. Where the full name is not given, use OR conditions, and consider that a name may be either a given or a family name. Write your query alone without additional commentary. [/INST]```\n",
+      "Generated Query 1 (likelihood 7.22%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR\n",
+      "given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR\n",
+      "given_name = 'Yat'  OR  family_name = 'Yat'  OR\n",
+      "given_name = 'Sun'  OR  family_name = 'Sun'  OR\n",
+      "given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR\n",
+      "given_name = 'Yat'  OR  family_name = 'Yat'  OR\n",
+      "given_name = 'Sun Yat'  OR  family_name = 'Sun Yat'  OR\n",
+      "given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR\n",
+      "given_name = 'Sun Yat'  OR  family_name = 'Sun Yat'  OR\n",
+      "given_name = 'Sun Y```\n",
+      "Generated Query 2 (likelihood 28.86%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR\n",
+      "given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR\n",
+      "given_name = 'Yat'  OR  family_name = 'Yat'  OR\n",
+      "given_name = 'Sun'  OR  family_name = 'Sun'  OR\n",
+      "given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR\n",
+      "given_name = 'Yat'  OR  family_name = 'Yat'  OR\n",
+      "given_name = 'Sun Yat'  OR  family_name = 'Sun Yat'  OR\n",
+      "given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR\n",
+      "given_name = 'Sun Yat'  OR  family_name = 'Sun Yat'  OR\n",
+      "given_name = 'Yat-```\n",
+      "Generated Query 3 (likelihood 14.39%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR\n",
+      "given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR\n",
+      "given_name = 'Yat'  OR  family_name = 'Yat'  OR\n",
+      "given_name = 'Sun'  OR  family_name = 'Sun'  OR\n",
+      "given_name LIKE '% Sun%'  OR  family_name LIKE '% Sun%'  OR\n",
+      "given_name LIKE '% Yat-sen%'  OR  family_name LIKE '% Yat-sen%'  OR\n",
+      "given_name LIKE '% Yat%'  OR  family_name LIKE '% Yat%'  OR\n",
+      "given_name LIKE '% Sun%'  OR  family_name LIKE '% Sun%'  OR\n",
+      "given_name LIKE '% Yat%'  OR  family_name LIKE '% Yat%'  OR\n",
+      "given_name LIKE '% Sun%'  OR  family_name LIKE '% Sun%'  OR\n",
+      "given_name LIKE '% Yat```\n",
+      "Generated Query 4 (likelihood 28.85%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR```\n",
+      "Generated Query 5 (likelihood 7.24%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Yat-sen'  OR ```\n",
+      "Generated Query 6 (likelihood 7.23%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'rebellion'  OR  family_name = 'rebellion'  OR  given_name = 'after'  OR  family_name = 'after'  OR  given_name = 'failure'  OR  family_name = 'failure'  OR  given_name = 'Qing'  OR  family_name = 'Qing'  OR  given_name = 'anti-Qing'  OR  family_name = 'anti-Qing'  OR  given_name = 'revolutionaries'  OR  family_name = 'revolutionaries'  OR  given_name = '```\n",
+      "Generated Query 7 (likelihood 0.00%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'rebellion'  OR  family_name = 'rebellion'  OR  given_name = 'failure'  OR  family_name = 'failure'  OR  given_name = 'anti-Qing'  OR  family_name = 'anti-Qing'  OR  given_name = 'Qing'  OR  family_name = 'Qing'  OR  given_name = 'revolutionaries'  OR  family_name = 'revolutionaries'  OR  given_name = 'exile'  OR  family_name = 'exile'\n",
+      "    OR\n",
+      "    given```\n",
+      "Generated Query 8 (likelihood 6.21%): ```  SELECT *  FROM People  WHERE  given_name = 'Sun Yat-sen'  OR  family_name = 'Sun Yat-sen'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'Sun'  OR  family_name = 'Sun'  OR  given_name = 'Yat-sen'  OR  family_name = 'Yat-sen'  OR  given_name = 'rebellion'  OR  family_name = 'rebellion'  OR  given_name = 'failure'  OR  family_name = 'failure'  OR  given_name = 'anti-Qing'  OR  family_name = 'anti-Qing'  OR  given_name = 'Qing'  OR  family_name = 'Qing'  OR  given_name = 'revolutionaries'  OR  family_name = 'revolutionaries'  OR  given_name = 'exile'  OR  family_name = 'exile'  OR  given_name```\n"
      ]
     }
    ],
